# orchestration_ml

./: Dockerfile  README.md  distrib.txt  pyproject.toml  requirements-api.txt  requirements.txt  test_data.json
api/: app.py  model.py
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml
notebooks/: model_proj.ipynb
notebooks/Notebooks/: Automatisation du projet.ipynb  Conteneurisation de l'API.ipynb  Déploiement sur Kubernetes.ipynb  Flask.ipynb  Kedro.ipynb  Linting et Refactoring.ipynb  MLflow.ipynb  Modèle de boosting.ipynb  Optimisation des hyper-paramètres.ipynb  Pipeline ML.ipynb  Pipeline de production.ipynb  Pipeline de pré-production.ipynb  Pipelines CI CD.ipynb  Présentation du cours.ipynb  Tests de modèles.ipynb  Tests logiciels.ipynb  Tracking et Model Registry.ipynb  Validation et interprétabilité.ipynb  Étude descriptive.ipynb
src/classification_loan/: __init__.py  __main__.py  settings.py
src/classification_loan/pipelines/processing/: __init__.py  nodes.py  pipeline.py
src/classification_loan/pipelines/training/: __init__.py  nodes.py  pipeline.py
